frontend/tests/errors/ER-024/fixed_cast_not_implemented/test.vx
#Pair(a:#u8, b:#u8);

&^main() -> #i32 {
  x:#u40.40;
  y:#Pair = (#Pair)x;
  0
}
